--- a/Results/Tables/E1Reg_Emotions_Unbalanced.html
+++ b/Results/Tables/E1Reg_Emotions_Unbalanced.html
@@ -4,82 +4,91 @@
 <tr><td></td><td colspan="4" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td>Hapiness</td><td>Anger</td><td>Sadness</td><td>Fear</td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Strong Tie Misinfo</td><td>0.500</td><td>6.969</td><td>-3.046</td><td>-6.381</td></tr>
-<tr><td style="text-align:left"></td><td>(1.470)</td><td>(6.204)</td><td>(6.654)</td><td>(5.967)</td></tr>
+<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Strong Tie Misinfo</td><td>-0.046</td><td>5.771</td><td>-2.882</td><td>-5.642</td></tr>
+<tr><td style="text-align:left"></td><td>(3.673)</td><td>(5.923)</td><td>(6.573)</td><td>(5.803)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong Tie Arg. Validated</td><td>1.442</td><td>7.460</td><td>9.097</td><td>-2.307</td></tr>
-<tr><td style="text-align:left"></td><td>(1.533)</td><td>(6.472)</td><td>(6.941)</td><td>(6.224)</td></tr>
+<tr><td style="text-align:left">Strong Tie Arg. Validated</td><td>-0.110</td><td>7.063</td><td>8.472</td><td>-2.712</td></tr>
+<tr><td style="text-align:left"></td><td>(3.829)</td><td>(6.174)</td><td>(6.852)</td><td>(6.049)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Weak Tie Validated</td><td>0.690</td><td>0.233</td><td>0.571</td><td>2.342</td></tr>
-<tr><td style="text-align:left"></td><td>(1.488)</td><td>(6.279)</td><td>(6.734)</td><td>(6.038)</td></tr>
+<tr><td style="text-align:left">Weak Tie Validated</td><td>1.552</td><td>0.174</td><td>0.914</td><td>2.839</td></tr>
+<tr><td style="text-align:left"></td><td>(3.714)</td><td>(5.990)</td><td>(6.647)</td><td>(5.868)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Eco chamber</td><td>-0.777</td><td>13.166<sup>*</sup></td><td>7.011</td><td>2.083</td></tr>
-<tr><td style="text-align:left"></td><td>(1.216)</td><td>(5.133)</td><td>(5.505)</td><td>(4.936)</td></tr>
+<tr><td style="text-align:left">High Eco chamber</td><td>-1.761</td><td>12.577<sup>*</sup></td><td>6.636</td><td>3.187</td></tr>
+<tr><td style="text-align:left"></td><td>(3.037)</td><td>(4.898)</td><td>(5.435)</td><td>(4.798)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Digital Citizenship</td><td>3.567<sup>**</sup></td><td>10.640<sup>*</sup></td><td>11.953<sup>*</sup></td><td>3.421</td></tr>
-<tr><td style="text-align:left"></td><td>(1.262)</td><td>(5.328)</td><td>(5.714)</td><td>(5.124)</td></tr>
+<tr><td style="text-align:left">High Digital Citizenship</td><td>3.854</td><td>10.161<sup>*</sup></td><td>12.216<sup>*</sup></td><td>2.082</td></tr>
+<tr><td style="text-align:left"></td><td>(3.156)</td><td>(5.090)</td><td>(5.648)</td><td>(4.987)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">30 to 40 years</td><td>1.798<sup>*</sup></td><td>-2.957</td><td>0.380</td><td>-4.080</td></tr>
-<tr><td style="text-align:left"></td><td>(0.845)</td><td>(3.565)</td><td>(3.823)</td><td>(3.428)</td></tr>
+<tr><td style="text-align:left">30 to 40 years</td><td>2.622</td><td>-3.563</td><td>0.053</td><td>-3.200</td></tr>
+<tr><td style="text-align:left"></td><td>(2.113)</td><td>(3.408)</td><td>(3.782)</td><td>(3.339)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">41 to 65 years</td><td>2.887<sup>***</sup></td><td>-1.114</td><td>6.130</td><td>-0.583</td></tr>
-<tr><td style="text-align:left"></td><td>(0.861)</td><td>(3.633)</td><td>(3.896)</td><td>(3.494)</td></tr>
+<tr><td style="text-align:left">41 to 65 years</td><td>6.570<sup>**</sup></td><td>-1.922</td><td>5.805</td><td>0.570</td></tr>
+<tr><td style="text-align:left"></td><td>(2.154)</td><td>(3.474)</td><td>(3.855)</td><td>(3.403)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">+66 years</td><td>1.943<sup>*</sup></td><td>1.657</td><td>-2.808</td><td>-4.467</td></tr>
-<tr><td style="text-align:left"></td><td>(0.958)</td><td>(4.043)</td><td>(4.336)</td><td>(3.888)</td></tr>
+<tr><td style="text-align:left">+66 years</td><td>2.775</td><td>0.385</td><td>-3.187</td><td>-3.484</td></tr>
+<tr><td style="text-align:left"></td><td>(2.404)</td><td>(3.877)</td><td>(4.303)</td><td>(3.799)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Low income</td><td>-0.342</td><td>2.313</td><td>2.547</td><td>-3.018</td></tr>
-<tr><td style="text-align:left"></td><td>(0.757)</td><td>(3.195)</td><td>(3.427)</td><td>(3.073)</td></tr>
+<tr><td style="text-align:left">Undergraduate</td><td>-3.088</td><td>2.032</td><td>2.464</td><td>-3.426</td></tr>
+<tr><td style="text-align:left"></td><td>(1.891)</td><td>(3.050)</td><td>(3.385)</td><td>(2.988)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Low-mid</td><td>-0.351</td><td>-2.101</td><td>-6.218</td><td>-7.082</td></tr>
-<tr><td style="text-align:left"></td><td>(1.101)</td><td>(4.648)</td><td>(4.985)</td><td>(4.470)</td></tr>
+<tr><td style="text-align:left">Graduate</td><td>-2.522</td><td>-2.143</td><td>-6.290</td><td>-7.282</td></tr>
+<tr><td style="text-align:left"></td><td>(2.748)</td><td>(4.432)</td><td>(4.918)</td><td>(4.342)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Undergraduate</td><td>3.500<sup>***</sup></td><td>-1.799</td><td>0.751</td><td>-4.882</td></tr>
-<tr><td style="text-align:left"></td><td>(0.618)</td><td>(2.608)</td><td>(2.797)</td><td>(2.508)</td></tr>
+<tr><td style="text-align:left">Male</td><td>6.744<sup>***</sup></td><td>-1.423</td><td>0.844</td><td>-4.563</td></tr>
+<tr><td style="text-align:left"></td><td>(1.546)</td><td>(2.493)</td><td>(2.767)</td><td>(2.443)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Graduate</td><td>-0.656</td><td>-0.881</td><td>-0.713</td><td>-4.645</td></tr>
-<tr><td style="text-align:left"></td><td>(1.060)</td><td>(4.472)</td><td>(4.797)</td><td>(4.301)</td></tr>
+<tr><td style="text-align:left">Far Left</td><td>-1.109</td><td>15.772<sup>***</sup></td><td>6.319</td><td>1.364</td></tr>
+<tr><td style="text-align:left"></td><td>(2.079)</td><td>(3.353)</td><td>(3.721)</td><td>(3.285)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Men</td><td>-1.609</td><td>-0.615</td><td>-13.086<sup>*</sup></td><td>-4.624</td></tr>
-<tr><td style="text-align:left"></td><td>(1.423)</td><td>(6.007)</td><td>(6.442)</td><td>(5.777)</td></tr>
+<tr><td style="text-align:left">Center-Left</td><td>-1.671</td><td>8.299<sup>*</sup></td><td>1.993</td><td>3.404</td></tr>
+<tr><td style="text-align:left"></td><td>(2.126)</td><td>(3.429)</td><td>(3.805)</td><td>(3.360)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Without Ideology</td><td>-1.849</td><td>11.821<sup>**</sup></td><td>3.524</td><td>-2.165</td></tr>
-<tr><td style="text-align:left"></td><td>(1.053)</td><td>(4.442)</td><td>(4.764)</td><td>(4.272)</td></tr>
+<tr><td style="text-align:left">Center</td><td>2.678</td><td>1.064</td><td>0.790</td><td>4.678</td></tr>
+<tr><td style="text-align:left"></td><td>(2.644)</td><td>(4.263)</td><td>(4.731)</td><td>(4.177)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Right-Wing</td><td>-0.428</td><td>-0.866</td><td>-1.790</td><td>-4.075</td></tr>
-<tr><td style="text-align:left"></td><td>(1.360)</td><td>(5.742)</td><td>(6.158)</td><td>(5.522)</td></tr>
+<tr><td style="text-align:left">Center-right</td><td>2.786</td><td>-1.534</td><td>-9.923</td><td>-1.269</td></tr>
+<tr><td style="text-align:left"></td><td>(3.221)</td><td>(5.194)</td><td>(5.764)</td><td>(5.089)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Left-Wing</td><td>-1.491</td><td>-6.447</td><td>-3.913</td><td>-7.774</td></tr>
-<tr><td style="text-align:left"></td><td>(1.274)</td><td>(5.375)</td><td>(5.765)</td><td>(5.170)</td></tr>
+<tr><td style="text-align:left">Far Right</td><td>-4.388</td><td>6.734</td><td>-23.103<sup>*</sup></td><td>3.373</td></tr>
+<tr><td style="text-align:left"></td><td>(6.266)</td><td>(10.104)</td><td>(11.213)</td><td>(9.899)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Low Income</td><td>-1.483</td><td>-2.366</td><td>-2.885</td><td>-8.184</td></tr>
-<tr><td style="text-align:left"></td><td>(1.312)</td><td>(5.537)</td><td>(5.938)</td><td>(5.325)</td></tr>
+<tr><td style="text-align:left">Low Income</td><td>-2.948</td><td>-0.344</td><td>-1.268</td><td>-4.128</td></tr>
+<tr><td style="text-align:left"></td><td>(3.398)</td><td>(5.479)</td><td>(6.080)</td><td>(5.368)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Low-Mid Income</td><td>-2.955</td><td>-9.371</td><td>3.225</td><td>-11.001</td></tr>
-<tr><td style="text-align:left"></td><td>(1.751)</td><td>(7.389)</td><td>(7.924)</td><td>(7.106)</td></tr>
+<tr><td style="text-align:left">Low-Mid Income</td><td>-3.125</td><td>-5.777</td><td>-3.465</td><td>-6.756</td></tr>
+<tr><td style="text-align:left"></td><td>(3.181)</td><td>(5.129)</td><td>(5.692)</td><td>(5.025)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Mid-High income</td><td>1.284</td><td>-1.361</td><td>-4.609</td><td>-4.385</td></tr>
-<tr><td style="text-align:left"></td><td>(1.740)</td><td>(7.342)</td><td>(7.874)</td><td>(7.061)</td></tr>
+<tr><td style="text-align:left">Mid-High income</td><td>-6.004</td><td>-1.653</td><td>-2.669</td><td>-8.009</td></tr>
+<tr><td style="text-align:left"></td><td>(3.275)</td><td>(5.281)</td><td>(5.860)</td><td>(5.174)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Highest</td><td>-1.873</td><td>8.702</td><td>-3.332</td><td>2.512</td></tr>
-<tr><td style="text-align:left"></td><td>(1.783)</td><td>(7.523)</td><td>(8.068)</td><td>(7.235)</td></tr>
+<tr><td style="text-align:left">Highest</td><td>-8.683<sup>*</sup></td><td>-8.244</td><td>3.608</td><td>-11.559</td></tr>
+<tr><td style="text-align:left"></td><td>(4.375)</td><td>(7.055)</td><td>(7.829)</td><td>(6.911)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong Tie Misinfo * High Eco Chamber</td><td>1.110</td><td>-0.262</td><td>0.576</td><td>9.410</td></tr>
-<tr><td style="text-align:left"></td><td>(1.768)</td><td>(7.460)</td><td>(8.001)</td><td>(7.175)</td></tr>
+<tr><td style="text-align:left">Strong Tie Misinfo * High Eco Chamber</td><td>1.310</td><td>-1.001</td><td>-4.356</td><td>-6.878</td></tr>
+<tr><td style="text-align:left"></td><td>(4.342)</td><td>(7.002)</td><td>(7.770)</td><td>(6.860)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong Tie Validated * High Eco Chamber</td><td>-1.436</td><td>-2.200</td><td>1.292</td><td>7.735</td></tr>
-<tr><td style="text-align:left"></td><td>(1.804)</td><td>(7.613)</td><td>(8.164)</td><td>(7.321)</td></tr>
+<tr><td style="text-align:left">Strong Tie Validated * High Eco Chamber</td><td>-3.985</td><td>7.960</td><td>-2.942</td><td>3.033</td></tr>
+<tr><td style="text-align:left"></td><td>(4.451)</td><td>(7.177)</td><td>(7.965)</td><td>(7.031)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Weak Tie Validated * High Eco Chamber</td><td>-0.612</td><td>-11.106</td><td>-6.407</td><td>9.644</td></tr>
-<tr><td style="text-align:left"></td><td>(1.854)</td><td>(7.825)</td><td>(8.392)</td><td>(7.526)</td></tr>
+<tr><td style="text-align:left">Weak Tie Validated * High Eco Chamber</td><td>0.773</td><td>-1.213</td><td>1.039</td><td>6.953</td></tr>
+<tr><td style="text-align:left"></td><td>(4.418)</td><td>(7.124)</td><td>(7.906)</td><td>(6.980)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong TieValidated * High Dig. citizen</td><td>-4.198<sup>*</sup></td><td>-0.331</td><td>-0.577</td><td>3.326</td></tr>
-<tr><td style="text-align:left"></td><td>(1.826)</td><td>(7.707)</td><td>(8.266)</td><td>(7.412)</td></tr>
+<tr><td style="text-align:left">Strong TieMisinfo * High Dig. citizen</td><td>3.555</td><td>-2.314</td><td>0.423</td><td>9.185</td></tr>
+<tr><td style="text-align:left"></td><td>(4.511)</td><td>(7.274)</td><td>(8.072)</td><td>(7.126)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong Tie * High Dig. Citizen</td><td>2.854</td><td>34.457<sup>***</sup></td><td>35.449<sup>***</sup></td><td>40.350<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(1.858)</td><td>(7.842)</td><td>(8.410)</td><td>(7.542)</td></tr>
+<tr><td style="text-align:left">Strong Tie Validated * High Dig. Citizen</td><td>5.495</td><td>-10.432</td><td>-6.001</td><td>9.702</td></tr>
+<tr><td style="text-align:left"></td><td>(4.631)</td><td>(7.467)</td><td>(8.287)</td><td>(7.316)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Weak Tie Validated* High Digit. Citizen</td><td>-4.273</td><td>0.099</td><td>-1.500</td><td>4.816</td></tr>
+<tr><td style="text-align:left"></td><td>(4.569)</td><td>(7.369)</td><td>(8.177)</td><td>(7.219)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Constant</td><td>8.748<sup>*</sup></td><td>34.748<sup>***</sup></td><td>34.813<sup>***</sup></td><td>36.700<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(3.956)</td><td>(6.379)</td><td>(7.079)</td><td>(6.250)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>679</td><td>679</td><td>679</td><td>679</td></tr>
-<tr><td style="text-align:left">Residual Std. Error (df = 654)</td><td>6.804</td><td>37.434</td><td>45.085</td><td>32.708</td></tr>
+<tr><td style="text-align:left">R<sup>2</sup></td><td>0.081</td><td>0.155</td><td>0.080</td><td>0.091</td></tr>
+<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.044</td><td>0.121</td><td>0.043</td><td>0.054</td></tr>
+<tr><td style="text-align:left">Residual Std. Error (df = 652)</td><td>19.158</td><td>30.896</td><td>34.285</td><td>30.268</td></tr>
+<tr><td style="text-align:left">F Statistic (df = 26; 652)</td><td>2.204<sup>***</sup></td><td>4.594<sup>***</sup></td><td>2.183<sup>***</sup></td><td>2.502<sup>***</sup></td></tr>
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Significance levels</td><td colspan="4" style="text-align:right"><sup>*</sup>p<0.05; <sup>**</sup>p<0.01; <sup>***</sup>p<0.001</td></tr>
 </table>
