--- a/Results/Tables/E2Reg_no_balanced.html
+++ b/Results/Tables/E2Reg_no_balanced.html
@@ -4,61 +4,68 @@
 <tr><td></td><td colspan="5" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td colspan="5">E1</td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td><td>(5)</td></tr>
-<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">T1: Like-Minded</td><td>0.442</td><td>0.479</td><td>0.477</td><td>0.448</td><td>0.448</td></tr>
-<tr><td style="text-align:left"></td><td>(0.264)</td><td>(0.267)</td><td>(0.263)</td><td>(0.263)</td><td>(0.263)</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">T1: Like-Minded</td><td>-0.331</td><td>-0.328</td><td>-0.337</td><td>-0.337</td><td>-0.337</td></tr>
+<tr><td style="text-align:left"></td><td>(0.267)</td><td>(0.267)</td><td>(0.267)</td><td>(0.268)</td><td>(0.268)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">T2: Opposite</td><td>1.241<sup>***</sup></td><td>1.292<sup>***</sup></td><td>1.276<sup>***</sup></td><td>1.249<sup>***</sup></td><td>1.249<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.274)</td><td>(0.276)</td><td>(0.272)</td><td>(0.272)</td><td>(0.272)</td></tr>
+<tr><td style="text-align:left">T2: Opposite</td><td>0.736<sup>**</sup></td><td>0.747<sup>**</sup></td><td>0.738<sup>**</sup></td><td>0.738<sup>**</sup></td><td>0.738<sup>**</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.261)</td><td>(0.260)</td><td>(0.260)</td><td>(0.261)</td><td>(0.261)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Eco Chamber</td><td>0.143</td><td>0.157</td><td>0.149</td><td>0.131</td><td>0.131</td></tr>
-<tr><td style="text-align:left"></td><td>(0.220)</td><td>(0.221)</td><td>(0.219)</td><td>(0.221)</td><td>(0.221)</td></tr>
+<tr><td style="text-align:left">High Eco Chamber</td><td>0.134</td><td>0.129</td><td>0.125</td><td>0.107</td><td>0.107</td></tr>
+<tr><td style="text-align:left"></td><td>(0.228)</td><td>(0.228)</td><td>(0.228)</td><td>(0.228)</td><td>(0.228)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Digital Citizenship</td><td>0.834<sup>***</sup></td><td>0.852<sup>***</sup></td><td>0.835<sup>***</sup></td><td>0.772<sup>**</sup></td><td>0.772<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.238)</td><td>(0.239)</td><td>(0.236)</td><td>(0.238)</td><td>(0.238)</td></tr>
+<tr><td style="text-align:left">High Digital Citizenship</td><td>0.368</td><td>0.375</td><td>0.364</td><td>0.314</td><td>0.314</td></tr>
+<tr><td style="text-align:left"></td><td>(0.230)</td><td>(0.230)</td><td>(0.230)</td><td>(0.232)</td><td>(0.232)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">30 to 04 years</td><td>0.023</td><td>0.011</td><td>0.022</td><td>0.053</td><td>0.053</td></tr>
-<tr><td style="text-align:left"></td><td>(0.166)</td><td>(0.174)</td><td>(0.172)</td><td>(0.172)</td><td>(0.172)</td></tr>
+<tr><td style="text-align:left">30 to 04 years</td><td>0.007</td><td>0.0002</td><td>0.009</td><td>0.020</td><td>0.020</td></tr>
+<tr><td style="text-align:left"></td><td>(0.168)</td><td>(0.174)</td><td>(0.174)</td><td>(0.175)</td><td>(0.175)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">41 to 65 years</td><td>0.044</td><td>0.062</td><td>0.076</td><td>0.125</td><td>0.125</td></tr>
-<tr><td style="text-align:left"></td><td>(0.167)</td><td>(0.175)</td><td>(0.173)</td><td>(0.175)</td><td>(0.175)</td></tr>
+<tr><td style="text-align:left">41 to 65 years</td><td>-0.046</td><td>-0.030</td><td>-0.016</td><td>0.023</td><td>0.023</td></tr>
+<tr><td style="text-align:left"></td><td>(0.169)</td><td>(0.175)</td><td>(0.175)</td><td>(0.178)</td><td>(0.178)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">+66 Years</td><td>0.068</td><td>0.085</td><td>0.110</td><td>0.121</td><td>0.121</td></tr>
-<tr><td style="text-align:left"></td><td>(0.185)</td><td>(0.194)</td><td>(0.193)</td><td>(0.194)</td><td>(0.194)</td></tr>
+<tr><td style="text-align:left">+66 years</td><td>0.040</td><td>0.063</td><td>0.087</td><td>0.079</td><td>0.079</td></tr>
+<tr><td style="text-align:left"></td><td>(0.187)</td><td>(0.194)</td><td>(0.196)</td><td>(0.199)</td><td>(0.199)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Media</td><td></td><td>0.176</td><td>0.176</td><td>0.151</td><td>0.151</td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(0.151)</td><td>(0.149)</td><td>(0.151)</td><td>(0.151)</td></tr>
+<tr><td style="text-align:left">Undergraduate</td><td></td><td>0.165</td><td>0.166</td><td>0.149</td><td>0.149</td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.151)</td><td>(0.151)</td><td>(0.153)</td><td>(0.153)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Postgrado</td><td></td><td>-0.258</td><td>-0.252</td><td>-0.280</td><td>-0.280</td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(0.215)</td><td>(0.212)</td><td>(0.217)</td><td>(0.217)</td></tr>
+<tr><td style="text-align:left">Graduate</td><td></td><td>-0.255</td><td>-0.246</td><td>-0.256</td><td>-0.256</td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.215)</td><td>(0.215)</td><td>(0.220)</td><td>(0.220)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Sin estudios</td><td></td><td></td><td>-0.126</td><td>-0.130</td><td>-0.130</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.125)</td><td>(0.125)</td><td>(0.125)</td></tr>
+<tr><td style="text-align:left">Male</td><td></td><td></td><td>-0.122</td><td>-0.111</td><td>-0.111</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.126)</td><td>(0.127)</td><td>(0.127)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Superior</td><td></td><td></td><td></td><td>0.096</td><td>0.096</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.216)</td><td>(0.216)</td></tr>
+<tr><td style="text-align:left">Far Left</td><td></td><td></td><td></td><td>0.219</td><td>0.219</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.172)</td><td>(0.172)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Male</td><td></td><td></td><td></td><td>-0.191</td><td>-0.191</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.290)</td><td>(0.290)</td></tr>
+<tr><td style="text-align:left">Center-Left</td><td></td><td></td><td></td><td>0.068</td><td>0.068</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.176)</td><td>(0.176)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Center wing</td><td></td><td></td><td></td><td>0.256</td><td>0.256</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.214)</td><td>(0.214)</td></tr>
+<tr><td style="text-align:left">Center</td><td></td><td></td><td></td><td>-0.023</td><td>-0.023</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.219)</td><td>(0.219)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Right-Wing</td><td>0.033</td><td>0.008</td><td>0.009</td><td>0.014</td><td>0.014</td></tr>
-<tr><td style="text-align:left"></td><td>(0.315)</td><td>(0.317)</td><td>(0.313)</td><td>(0.314)</td><td>(0.314)</td></tr>
+<tr><td style="text-align:left">Center-Right</td><td></td><td></td><td></td><td>-0.354</td><td>-0.354</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.265)</td><td>(0.265)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Left Wing</td><td>0.427</td><td>0.413</td><td>0.403</td><td>0.387</td><td>0.387</td></tr>
-<tr><td style="text-align:left"></td><td>(0.316)</td><td>(0.317)</td><td>(0.314)</td><td>(0.315)</td><td>(0.315)</td></tr>
+<tr><td style="text-align:left">Far Right</td><td></td><td></td><td></td><td>-0.004</td><td>-0.004</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.522)</td><td>(0.522)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Like-Minded * High EcoChamber</td><td>-0.512</td><td>-0.534</td><td>-0.526</td><td>-0.506</td><td>-0.506</td></tr>
-<tr><td style="text-align:left"></td><td>(0.330)</td><td>(0.332)</td><td>(0.328)</td><td>(0.328)</td><td>(0.328)</td></tr>
+<tr><td style="text-align:left">Like-Minded * High EcoChamber</td><td>-0.038</td><td>-0.040</td><td>-0.036</td><td>-0.019</td><td>-0.019</td></tr>
+<tr><td style="text-align:left"></td><td>(0.318)</td><td>(0.317)</td><td>(0.317)</td><td>(0.318)</td><td>(0.318)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Opposite* High EcoChamber</td><td>-1.182<sup>***</sup></td><td>-1.242<sup>***</sup></td><td>-1.209<sup>***</sup></td><td>-1.162<sup>***</sup></td><td>-1.162<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.332)</td><td>(0.334)</td><td>(0.331)</td><td>(0.331)</td><td>(0.331)</td></tr>
+<tr><td style="text-align:left">Opposite* High EcoChamber</td><td>0.466</td><td>0.463</td><td>0.449</td><td>0.444</td><td>0.444</td></tr>
+<tr><td style="text-align:left"></td><td>(0.321)</td><td>(0.320)</td><td>(0.321)</td><td>(0.321)</td><td>(0.321)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Like-minded*High Digit. Citizen</td><td>3.921<sup>***</sup></td><td>3.829<sup>***</sup></td><td>3.881<sup>***</sup></td><td>3.801<sup>***</sup></td><td>3.801<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.221)</td><td>(0.240)</td><td>(0.241)</td><td>(0.309)</td><td>(0.309)</td></tr>
+<tr><td style="text-align:left">Like-minded*High Digit. Citizen</td><td>0.255</td><td>0.244</td><td>0.244</td><td>0.255</td><td>0.255</td></tr>
+<tr><td style="text-align:left"></td><td>(0.333)</td><td>(0.333)</td><td>(0.333)</td><td>(0.333)</td><td>(0.333)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Opposite*High Digit.citizen</td><td>-0.717<sup>*</sup></td><td>-0.753<sup>*</sup></td><td>-0.731<sup>*</sup></td><td>-0.706<sup>*</sup></td><td>-0.706<sup>*</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.329)</td><td>(0.328)</td><td>(0.329)</td><td>(0.330)</td><td>(0.330)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Constant</td><td>4.320<sup>***</sup></td><td>4.254<sup>***</sup></td><td>4.306<sup>***</sup></td><td>4.298<sup>***</sup></td><td>4.298<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.206)</td><td>(0.217)</td><td>(0.223)</td><td>(0.227)</td><td>(0.227)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
 <tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>679</td><td>679</td><td>679</td><td>679</td><td>679</td></tr>
-<tr><td style="text-align:left">Residual Std. Error</td><td>1.624 (df = 667)</td><td>1.520 (df = 665)</td><td>1.554 (df = 664)</td><td>1.592 (df = 661)</td><td>1.592 (df = 661)</td></tr>
+<tr><td style="text-align:left">Log Likelihood</td><td>-1,278.661</td><td>-1,275.791</td><td>-1,275.315</td><td>-1,272.942</td><td>-1,272.942</td></tr>
+<tr><td style="text-align:left">Akaike Inf. Crit.</td><td>2,581.322</td><td>2,579.582</td><td>2,580.631</td><td>2,585.884</td><td>2,585.884</td></tr>
 <tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Significance levels</td><td colspan="5" style="text-align:right"><sup>*</sup>p<0.05; <sup>**</sup>p<0.01; <sup>***</sup>p<0.001</td></tr>
 </table>
