--- a/Results/Tables/E1-balanced.html
+++ b/Results/Tables/E1-balanced.html
@@ -4,41 +4,41 @@
 <tr><td></td><td colspan="3" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td colspan="3">Model 1</td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td></tr>
-<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Strong Tie Arg. Validated</td><td>-0.279</td><td>-0.309</td><td>-0.505</td></tr>
-<tr><td style="text-align:left"></td><td>(0.222)</td><td>(0.228)</td><td>(0.421)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Weak Tie Misinformation</td><td>0.146</td><td>0.143</td><td>-0.015</td></tr>
+<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Strong Tie Misinfo</td><td>-0.146</td><td>-0.143</td><td>0.015</td></tr>
 <tr><td style="text-align:left"></td><td>(0.215)</td><td>(0.220)</td><td>(0.397)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Weak Tie Arg. Validated</td><td>0.201</td><td>0.269</td><td>-0.072</td></tr>
-<tr><td style="text-align:left"></td><td>(0.217)</td><td>(0.224)</td><td>(0.392)</td></tr>
+<tr><td style="text-align:left">Strong Tie Arg. Validated</td><td>-0.425</td><td>-0.452<sup>*</sup></td><td>-0.490</td></tr>
+<tr><td style="text-align:left"></td><td>(0.222)</td><td>(0.228)</td><td>(0.433)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Eco chamber</td><td></td><td>0.869<sup>***</sup></td><td>1.171<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(0.168)</td><td>(0.346)</td></tr>
+<tr><td style="text-align:left">Weak Tie Arg. Validated</td><td>0.054</td><td>0.126</td><td>-0.057</td></tr>
+<tr><td style="text-align:left"></td><td>(0.218)</td><td>(0.224)</td><td>(0.404)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Digital Citizenship</td><td></td><td>0.129</td><td>-0.397</td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(0.175)</td><td>(0.354)</td></tr>
+<tr><td style="text-align:left">High Eco chamber</td><td></td><td>0.869<sup>***</sup></td><td>0.876<sup>**</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.168)</td><td>(0.321)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong Tie Misinfo * High Eco Chamber</td><td></td><td></td><td>-0.567</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.492)</td></tr>
+<tr><td style="text-align:left">High Digital Citizenship</td><td></td><td>0.129</td><td>0.112</td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.175)</td><td>(0.336)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong Tie Validated * High Eco Chamber</td><td></td><td></td><td>-0.295</td></tr>
+<tr><td style="text-align:left">Strong Tie Misinfo * High Eco Chamber</td><td></td><td></td><td>0.295</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td>(0.472)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Weak Tie Validated * High EcoChamber</td><td></td><td></td><td>-0.338</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.484)</td></tr>
+<tr><td style="text-align:left">Strong Tie Validated * High Eco Chamber</td><td></td><td></td><td>-0.272</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.475)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong TieMisinfo * High Dig. citizen</td><td></td><td></td><td>0.796</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.516)</td></tr>
+<tr><td style="text-align:left">Weak Tie Validated * High EcoChamber</td><td></td><td></td><td>-0.043</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.467)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong Tie * High Dig. Citizen</td><td></td><td></td><td>0.510</td></tr>
+<tr><td style="text-align:left">Strong TieMisinfo * High Dig. citizen</td><td></td><td></td><td>-0.510</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td>(0.488)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Weak Tie Validated* High Digit. Citizen</td><td></td><td></td><td>0.829</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.498)</td></tr>
+<tr><td style="text-align:left">Strong Tie * High Dig. Citizen</td><td></td><td></td><td>0.286</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.503)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Constante</td><td>-0.261</td><td>-0.797<sup>***</sup></td><td>-0.632<sup>*</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.152)</td><td>(0.196)</td><td>(0.272)</td></tr>
+<tr><td style="text-align:left">Weak Tie Validated* High Digit. Citizen</td><td></td><td></td><td>0.319</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.485)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Constant</td><td>-0.115</td><td>-0.654<sup>***</sup></td><td>-0.647<sup>*</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.152)</td><td>(0.198)</td><td>(0.289)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
 <tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>679</td><td>679</td><td>679</td></tr>
 <tr><td style="text-align:left">Log Likelihood</td><td>-463.046</td><td>-446.270</td><td>-444.281</td></tr>
