--- a/Results/Tables/E1Reg_Emotions_Balanced.html
+++ b/Results/Tables/E1Reg_Emotions_Balanced.html
@@ -1,46 +1,49 @@
 
 <table style="text-align:center"><caption><strong>Experiment 1 - Emotions During social media discussions</strong></caption>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="4">Robust Lineal models of Emotions</td></tr>
+<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="4">OLS of Emotions</td></tr>
 <tr><td></td><td colspan="4" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td>Hapiness</td><td>Anger</td><td>Sadness</td><td>Fear</td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Stron Tie Misinfo</td><td>0.185</td><td>6.575</td><td>-1.859</td><td>-6.453</td></tr>
-<tr><td style="text-align:left"></td><td>(1.328)</td><td>(6.284)</td><td>(6.599)</td><td>(5.910)</td></tr>
+<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Stron Tie Misinfo</td><td>-0.599</td><td>6.366</td><td>-1.841</td><td>-5.779</td></tr>
+<tr><td style="text-align:left"></td><td>(3.698)</td><td>(5.956)</td><td>(6.531)</td><td>(5.766)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong Tie Arg. Validated</td><td>1.125</td><td>7.285</td><td>9.559</td><td>-1.667</td></tr>
-<tr><td style="text-align:left"></td><td>(1.387)</td><td>(6.563)</td><td>(6.891)</td><td>(6.172)</td></tr>
+<tr><td style="text-align:left">Strong Tie Arg. Validated</td><td>-0.131</td><td>7.362</td><td>9.406</td><td>-1.946</td></tr>
+<tr><td style="text-align:left"></td><td>(3.862)</td><td>(6.220)</td><td>(6.820)</td><td>(6.022)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Weak Tie Validated</td><td>0.709</td><td>2.170</td><td>0.289</td><td>1.935</td></tr>
-<tr><td style="text-align:left"></td><td>(1.348)</td><td>(6.380)</td><td>(6.700)</td><td>(6.000)</td></tr>
+<tr><td style="text-align:left">Weak Tie Validated</td><td>1.429</td><td>1.785</td><td>0.178</td><td>2.192</td></tr>
+<tr><td style="text-align:left"></td><td>(3.755)</td><td>(6.047)</td><td>(6.631)</td><td>(5.855)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Eco chamber</td><td>-0.988</td><td>14.204<sup>**</sup></td><td>7.566</td><td>2.866</td></tr>
-<tr><td style="text-align:left"></td><td>(1.095)</td><td>(5.182)</td><td>(5.442)</td><td>(4.874)</td></tr>
+<tr><td style="text-align:left">High Eco chamber</td><td>-2.648</td><td>13.333<sup>**</sup></td><td>7.496</td><td>3.556</td></tr>
+<tr><td style="text-align:left"></td><td>(3.050)</td><td>(4.912)</td><td>(5.386)</td><td>(4.755)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Digital Citizenship</td><td>2.657<sup>*</sup></td><td>12.785<sup>*</sup></td><td>12.503<sup>*</sup></td><td>3.356</td></tr>
-<tr><td style="text-align:left"></td><td>(1.143)</td><td>(5.407)</td><td>(5.678)</td><td>(5.085)</td></tr>
+<tr><td style="text-align:left">High Digital Citizenship</td><td>3.070</td><td>12.325<sup>*</sup></td><td>12.392<sup>*</sup></td><td>2.304</td></tr>
+<tr><td style="text-align:left"></td><td>(3.182)</td><td>(5.125)</td><td>(5.620)</td><td>(4.962)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong Tie Misinfo * High Eco Chamber</td><td>0.956</td><td>1.024</td><td>-4.243</td><td>-3.388</td></tr>
-<tr><td style="text-align:left"></td><td>(1.573)</td><td>(7.446)</td><td>(7.818)</td><td>(7.002)</td></tr>
+<tr><td style="text-align:left">Strong Tie Misinfo * High Eco Chamber</td><td>0.588</td><td>0.994</td><td>-4.221</td><td>-5.791</td></tr>
+<tr><td style="text-align:left"></td><td>(4.382)</td><td>(7.057)</td><td>(7.738)</td><td>(6.832)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong Tie Validated * High Eco Chamber</td><td>-1.408</td><td>10.658</td><td>-4.348</td><td>2.899</td></tr>
-<tr><td style="text-align:left"></td><td>(1.597)</td><td>(7.558)</td><td>(7.936)</td><td>(7.108)</td></tr>
+<tr><td style="text-align:left">Strong Tie Validated * High Eco Chamber</td><td>-2.594</td><td>10.435</td><td>-4.279</td><td>3.760</td></tr>
+<tr><td style="text-align:left"></td><td>(4.448)</td><td>(7.163)</td><td>(7.854)</td><td>(6.935)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Weak Tie Validated * High Eco Chamber</td><td>0.552</td><td>-1.076</td><td>0.524</td><td>9.370</td></tr>
-<tr><td style="text-align:left"></td><td>(1.597)</td><td>(7.557)</td><td>(7.936)</td><td>(7.107)</td></tr>
+<tr><td style="text-align:left">Weak Tie Validated * High Eco Chamber</td><td>0.686</td><td>-0.810</td><td>0.578</td><td>7.943</td></tr>
+<tr><td style="text-align:left"></td><td>(4.447)</td><td>(7.163)</td><td>(7.854)</td><td>(6.935)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong TieValidated * High Dig. citizen</td><td>-0.790</td><td>-2.081</td><td>1.177</td><td>8.110</td></tr>
-<tr><td style="text-align:left"></td><td>(1.629)</td><td>(7.709)</td><td>(8.095)</td><td>(7.250)</td></tr>
+<tr><td style="text-align:left">Strong TieValidated * High Dig. citizen</td><td>4.941</td><td>-2.330</td><td>1.147</td><td>9.218</td></tr>
+<tr><td style="text-align:left"></td><td>(4.537)</td><td>(7.307)</td><td>(8.012)</td><td>(7.074)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Strong Tie * High Dig. Citizen</td><td>-0.638</td><td>-11.362</td><td>-4.043</td><td>9.540</td></tr>
-<tr><td style="text-align:left"></td><td>(1.670)</td><td>(7.902)</td><td>(8.298)</td><td>(7.432)</td></tr>
+<tr><td style="text-align:left">Strong Tie * High Dig. Citizen</td><td>4.927</td><td>-11.554</td><td>-3.932</td><td>9.350</td></tr>
+<tr><td style="text-align:left"></td><td>(4.650)</td><td>(7.490)</td><td>(8.213)</td><td>(7.251)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Weak Tie Validated* High Digit. Citizen</td><td>-3.369<sup>*</sup></td><td>-1.543</td><td>0.508</td><td>4.055</td></tr>
-<tr><td style="text-align:left"></td><td>(1.654)</td><td>(7.827)</td><td>(8.219)</td><td>(7.361)</td></tr>
+<tr><td style="text-align:left">Weak Tie Validated* High Digit. Citizen</td><td>-3.556</td><td>-1.388</td><td>0.585</td><td>5.033</td></tr>
+<tr><td style="text-align:left"></td><td>(4.606)</td><td>(7.419)</td><td>(8.135)</td><td>(7.183)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Constant</td><td>3.540<sup>***</sup></td><td>32.016<sup>***</sup></td><td>33.832<sup>***</sup></td><td>22.625<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.971)</td><td>(4.594)</td><td>(4.824)</td><td>(4.320)</td></tr>
+<tr><td style="text-align:left">Constant</td><td>8.940<sup>***</sup></td><td>32.866<sup>***</sup></td><td>33.985<sup>***</sup></td><td>24.448<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(2.703)</td><td>(4.354)</td><td>(4.774)</td><td>(4.215)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>679</td><td>679</td><td>679</td><td>679</td></tr>
-<tr><td style="text-align:left">Residual Std. Error (df = 667)</td><td>6.358</td><td>38.270</td><td>47.222</td><td>33.927</td></tr>
+<tr><td style="text-align:left">R<sup>2</sup></td><td>0.025</td><td>0.106</td><td>0.050</td><td>0.061</td></tr>
+<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.009</td><td>0.091</td><td>0.034</td><td>0.045</td></tr>
+<tr><td style="text-align:left">Residual Std. Error (df = 667)</td><td>19.506</td><td>31.417</td><td>34.448</td><td>30.416</td></tr>
+<tr><td style="text-align:left">F Statistic (df = 11; 667)</td><td>1.565</td><td>7.183<sup>***</sup></td><td>3.189<sup>***</sup></td><td>3.917<sup>***</sup></td></tr>
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Significance levels</td><td colspan="4" style="text-align:right"><sup>*</sup>p<0.05; <sup>**</sup>p<0.01; <sup>***</sup>p<0.001</td></tr>
 </table>
