--- a/Results/Tables/E1_Balanced_test.html
+++ b/Results/Tables/E1_Balanced_test.html
@@ -4,54 +4,60 @@
 <tr><td></td><td colspan="3" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td>Strong Tie/Validated</td><td>Weak Tie/Misinformation</td><td>Weak Tie/Validated</td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td></tr>
-<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">High Echo Chamber</td><td>-0.003</td><td>0.068</td><td>-0.288</td></tr>
-<tr><td style="text-align:left"></td><td>(0.236)</td><td>(0.232)</td><td>(0.235)</td></tr>
+<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">High Echo Chamber</td><td>-0.079</td><td>-0.073</td><td>-0.359</td></tr>
+<tr><td style="text-align:left"></td><td>(0.233)</td><td>(0.238)</td><td>(0.236)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Digital Citizenship</td><td>0.167</td><td>0.185</td><td>0.195</td></tr>
-<tr><td style="text-align:left"></td><td>(0.243)</td><td>(0.239)</td><td>(0.241)</td></tr>
+<tr><td style="text-align:left">High Digital Citizenship</td><td>-0.196</td><td>-0.023</td><td>0.004</td></tr>
+<tr><td style="text-align:left"></td><td>(0.241)</td><td>(0.248)</td><td>(0.243)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Men</td><td>0.071</td><td>-0.103</td><td>0.159</td></tr>
-<tr><td style="text-align:left"></td><td>(0.229)</td><td>(0.226)</td><td>(0.227)</td></tr>
+<tr><td style="text-align:left">Men</td><td>0.142</td><td>0.175</td><td>0.271</td></tr>
+<tr><td style="text-align:left"></td><td>(0.228)</td><td>(0.233)</td><td>(0.229)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">30 to 40 years</td><td>-0.231</td><td>0.099</td><td>-0.053</td></tr>
-<tr><td style="text-align:left"></td><td>(0.308)</td><td>(0.307)</td><td>(0.311)</td></tr>
+<tr><td style="text-align:left">30 to 40 years</td><td>-0.150</td><td>-0.330</td><td>-0.161</td></tr>
+<tr><td style="text-align:left"></td><td>(0.308)</td><td>(0.317)</td><td>(0.317)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">41 to 65 years</td><td>0.148</td><td>-0.017</td><td>-0.073</td></tr>
-<tr><td style="text-align:left"></td><td>(0.307)</td><td>(0.321)</td><td>(0.323)</td></tr>
+<tr><td style="text-align:left">41 to 65 years</td><td>-0.043</td><td>0.170</td><td>-0.066</td></tr>
+<tr><td style="text-align:left"></td><td>(0.323)</td><td>(0.318)</td><td>(0.331)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">+65 years</td><td>-0.597</td><td>0.118</td><td>0.051</td></tr>
-<tr><td style="text-align:left"></td><td>(0.366)</td><td>(0.344)</td><td>(0.341)</td></tr>
+<tr><td style="text-align:left">+66 years</td><td>-0.210</td><td>-0.704</td><td>-0.083</td></tr>
+<tr><td style="text-align:left"></td><td>(0.348)</td><td>(0.376)</td><td>(0.349)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Low income</td><td>-0.341</td><td>-1.023</td><td>-0.729</td></tr>
-<tr><td style="text-align:left"></td><td>(0.526)</td><td>(0.523)</td><td>(0.529)</td></tr>
+<tr><td style="text-align:left">Low income</td><td>1.050<sup>*</sup></td><td>0.692</td><td>0.300</td></tr>
+<tr><td style="text-align:left"></td><td>(0.524)</td><td>(0.492)</td><td>(0.495)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Low-mid</td><td>-0.404</td><td>-0.685</td><td>-0.596</td></tr>
-<tr><td style="text-align:left"></td><td>(0.505)</td><td>(0.486)</td><td>(0.499)</td></tr>
+<tr><td style="text-align:left">Low-mid</td><td>0.719</td><td>0.291</td><td>0.098</td></tr>
+<tr><td style="text-align:left"></td><td>(0.487)</td><td>(0.454)</td><td>(0.447)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Mid-High income</td><td>-0.589</td><td>-0.282</td><td>-0.402</td></tr>
-<tr><td style="text-align:left"></td><td>(0.528)</td><td>(0.499)</td><td>(0.514)</td></tr>
+<tr><td style="text-align:left">Mid-High income</td><td>0.315</td><td>-0.307</td><td>-0.111</td></tr>
+<tr><td style="text-align:left"></td><td>(0.500)</td><td>(0.473)</td><td>(0.457)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Highest</td><td>-0.718</td><td>-0.818</td><td>-0.819</td></tr>
-<tr><td style="text-align:left"></td><td>(0.676)</td><td>(0.648)</td><td>(0.659)</td></tr>
+<tr><td style="text-align:left">Highest</td><td>0.903</td><td>0.088</td><td>0.016</td></tr>
+<tr><td style="text-align:left"></td><td>(0.650)</td><td>(0.647)</td><td>(0.626)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Center wing</td><td>0.569</td><td>0.230</td><td>-0.202</td></tr>
-<tr><td style="text-align:left"></td><td>(0.432)</td><td>(0.377)</td><td>(0.370)</td></tr>
+<tr><td style="text-align:left">Far Left</td><td>0.752<sup>*</sup></td><td>0.440</td><td>0.471</td></tr>
+<tr><td style="text-align:left"></td><td>(0.306)</td><td>(0.324)</td><td>(0.323)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Right-Wing</td><td>0.749</td><td>0.532</td><td>0.104</td></tr>
-<tr><td style="text-align:left"></td><td>(0.584)</td><td>(0.517)</td><td>(0.524)</td></tr>
+<tr><td style="text-align:left">Center-left</td><td>-0.097</td><td>0.401</td><td>0.303</td></tr>
+<tr><td style="text-align:left"></td><td>(0.326)</td><td>(0.308)</td><td>(0.313)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Left-wing</td><td>0.618</td><td>-0.144</td><td>-0.191</td></tr>
-<tr><td style="text-align:left"></td><td>(0.428)</td><td>(0.377)</td><td>(0.364)</td></tr>
+<tr><td style="text-align:left">Center</td><td>0.234</td><td>-0.336</td><td>0.433</td></tr>
+<tr><td style="text-align:left"></td><td>(0.377)</td><td>(0.438)</td><td>(0.373)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Undergraduate</td><td>-0.011</td><td>-0.157</td><td>-0.083</td></tr>
-<tr><td style="text-align:left"></td><td>(0.273)</td><td>(0.275)</td><td>(0.279)</td></tr>
+<tr><td style="text-align:left">Center-right</td><td>-0.395</td><td>0.016</td><td>-0.047</td></tr>
+<tr><td style="text-align:left"></td><td>(0.489)</td><td>(0.458)</td><td>(0.455)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Graduate</td><td>0.520</td><td>0.405</td><td>0.576</td></tr>
-<tr><td style="text-align:left"></td><td>(0.430)</td><td>(0.418)</td><td>(0.417)</td></tr>
+<tr><td style="text-align:left">Far right</td><td>0.038</td><td>-0.996</td><td>0.220</td></tr>
+<tr><td style="text-align:left"></td><td>(0.846)</td><td>(1.181)</td><td>(0.847)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Constant</td><td>-0.275</td><td>0.356</td><td>0.558</td></tr>
-<tr><td style="text-align:left"></td><td>(0.655)</td><td>(0.604)</td><td>(0.608)</td></tr>
+<tr><td style="text-align:left">Undergraduate</td><td>0.126</td><td>0.151</td><td>0.067</td></tr>
+<tr><td style="text-align:left"></td><td>(0.276)</td><td>(0.281)</td><td>(0.284)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Akaike Inf. Crit.</td><td>1,936.342</td><td>1,936.342</td><td>1,936.342</td></tr>
+<tr><td style="text-align:left">Graduate</td><td>-0.416</td><td>0.106</td><td>0.168</td></tr>
+<tr><td style="text-align:left"></td><td>(0.419)</td><td>(0.408)</td><td>(0.392)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Constant</td><td>-0.559</td><td>-0.297</td><td>-0.223</td></tr>
+<tr><td style="text-align:left"></td><td>(0.506)</td><td>(0.473)</td><td>(0.465)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
+<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Akaike Inf. Crit.</td><td>1,938.851</td><td>1,938.851</td><td>1,938.851</td></tr>
 <tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Significance levels</td><td colspan="3" style="text-align:right"><sup>*</sup>p<0.05; <sup>**</sup>p<0.01; <sup>***</sup>p<0.001</td></tr>
 </table>
