--- a/Results/Tables/E1_no_balanced.html
+++ b/Results/Tables/E1_no_balanced.html
@@ -3,71 +3,89 @@
 <tr><td></td><td colspan="4" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td colspan="4">E3</td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">E3TreatAmigo-validado</td><td>-0.529</td><td>-0.506</td><td>-0.531</td><td>-0.535</td></tr>
-<tr><td style="text-align:left"></td><td>(0.429)</td><td>(0.431)</td><td>(0.432)</td><td>(0.438)</td></tr>
+<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">E3TreatAmigo-Misinfo</td><td>-0.055</td><td>-0.109</td><td>-0.091</td><td>-0.101</td></tr>
+<tr><td style="text-align:left"></td><td>(0.407)</td><td>(0.409)</td><td>(0.411)</td><td>(0.421)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatConocido-Misinfo</td><td>0.055</td><td>0.109</td><td>0.091</td><td>0.099</td></tr>
-<tr><td style="text-align:left"></td><td>(0.407)</td><td>(0.409)</td><td>(0.411)</td><td>(0.417)</td></tr>
+<tr><td style="text-align:left">E3TreatAmigo-validado</td><td>-0.584</td><td>-0.615</td><td>-0.621</td><td>-0.707</td></tr>
+<tr><td style="text-align:left"></td><td>(0.442)</td><td>(0.444)</td><td>(0.445)</td><td>(0.455)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatConocido-validado</td><td>0.058</td><td>0.079</td><td>0.084</td><td>0.034</td></tr>
-<tr><td style="text-align:left"></td><td>(0.401)</td><td>(0.402)</td><td>(0.403)</td><td>(0.413)</td></tr>
+<tr><td style="text-align:left">E3TreatConocido-validado</td><td>0.003</td><td>-0.030</td><td>-0.007</td><td>-0.078</td></tr>
+<tr><td style="text-align:left"></td><td>(0.412)</td><td>(0.413)</td><td>(0.414)</td><td>(0.427)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">HomoIndex</td><td>1.096<sup>***</sup></td><td>1.079<sup>***</sup></td><td>1.041<sup>***</sup></td><td>0.958<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.352)</td><td>(0.353)</td><td>(0.354)</td><td>(0.364)</td></tr>
+<tr><td style="text-align:left">HomoIndex</td><td>0.829<sup>**</sup></td><td>0.785<sup>**</sup></td><td>0.786<sup>**</sup></td><td>0.781<sup>**</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.327)</td><td>(0.328)</td><td>(0.330)</td><td>(0.343)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">DigitIndex</td><td>-0.252</td><td>-0.222</td><td>-0.241</td><td>-0.443</td></tr>
-<tr><td style="text-align:left"></td><td>(0.362)</td><td>(0.364)</td><td>(0.365)</td><td>(0.376)</td></tr>
+<tr><td style="text-align:left">DigitIndex</td><td>0.167</td><td>0.158</td><td>0.134</td><td>0.001</td></tr>
+<tr><td style="text-align:left"></td><td>(0.343)</td><td>(0.343)</td><td>(0.345)</td><td>(0.355)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">AgeRecod30 a 40 años</td><td>-0.826<sup>***</sup></td><td>-0.896<sup>***</sup></td><td>-0.873<sup>***</sup></td><td>-0.823<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.221)</td><td>(0.232)</td><td>(0.233)</td><td>(0.239)</td></tr>
+<tr><td style="text-align:left">AgeRecod30 a 40 años</td><td>-0.826<sup>***</sup></td><td>-0.896<sup>***</sup></td><td>-0.873<sup>***</sup></td><td>-0.811<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.221)</td><td>(0.232)</td><td>(0.233)</td><td>(0.242)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">AgeRecod41 a 65 años</td><td>-0.897<sup>***</sup></td><td>-0.948<sup>***</sup></td><td>-0.907<sup>***</sup></td><td>-0.785<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.222)</td><td>(0.232)</td><td>(0.234)</td><td>(0.242)</td></tr>
+<tr><td style="text-align:left">AgeRecod41 a 65 años</td><td>-0.897<sup>***</sup></td><td>-0.948<sup>***</sup></td><td>-0.907<sup>***</sup></td><td>-0.768<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.222)</td><td>(0.232)</td><td>(0.234)</td><td>(0.246)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">AgeRecod+66 años</td><td>-0.906<sup>***</sup></td><td>-0.964<sup>***</sup></td><td>-0.889<sup>***</sup></td><td>-0.972<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.248)</td><td>(0.261)</td><td>(0.263)</td><td>(0.271)</td></tr>
+<tr><td style="text-align:left">AgeRecod+66 años</td><td>-0.906<sup>***</sup></td><td>-0.964<sup>***</sup></td><td>-0.889<sup>***</sup></td><td>-0.955<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.248)</td><td>(0.261)</td><td>(0.263)</td><td>(0.275)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">EducRec2</td><td></td><td>0.293</td><td>0.296</td><td>0.181</td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(0.205)</td><td>(0.206)</td><td>(0.213)</td></tr>
+<tr><td style="text-align:left">EducRec2</td><td></td><td>0.293</td><td>0.296</td><td>0.244</td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.205)</td><td>(0.206)</td><td>(0.219)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">EducRec3</td><td></td><td>0.037</td><td>0.059</td><td>-0.183</td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(0.290)</td><td>(0.292)</td><td>(0.308)</td></tr>
+<tr><td style="text-align:left">EducRec3</td><td></td><td>0.037</td><td>0.059</td><td>-0.099</td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.290)</td><td>(0.292)</td><td>(0.321)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">GenRecodMasculino</td><td></td><td></td><td>-0.402<sup>**</sup></td><td>-0.452<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.168)</td><td>(0.174)</td></tr>
+<tr><td style="text-align:left">GenRecodMasculino</td><td></td><td></td><td>-0.402<sup>**</sup></td><td>-0.452<sup>**</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.168)</td><td>(0.178)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">ideologiaNinguno</td><td></td><td></td><td></td><td>-0.096</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.301)</td></tr>
+<tr><td style="text-align:left">ideologiaE. Izquierda</td><td></td><td></td><td></td><td>1.022<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.236)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">ideologiaDerecha</td><td></td><td></td><td></td><td>-0.362</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.424)</td></tr>
+<tr><td style="text-align:left">ideologiaCentro-Izquierda</td><td></td><td></td><td></td><td>0.963<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.243)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">ideologiaIzquierda</td><td></td><td></td><td></td><td>0.892<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.299)</td></tr>
+<tr><td style="text-align:left">ideologiaCentro</td><td></td><td></td><td></td><td>0.085</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.304)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatAmigo-validado:HomoIndex</td><td>-0.502</td><td>-0.431</td><td>-0.371</td><td>-0.469</td></tr>
-<tr><td style="text-align:left"></td><td>(0.502)</td><td>(0.505)</td><td>(0.508)</td><td>(0.524)</td></tr>
+<tr><td style="text-align:left">ideologiaCentro-Derecha</td><td></td><td></td><td></td><td>-0.119</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.393)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatConocido-Misinfo:HomoIndex</td><td>-0.267</td><td>-0.294</td><td>-0.255</td><td>-0.183</td></tr>
-<tr><td style="text-align:left"></td><td>(0.480)</td><td>(0.482)</td><td>(0.484)</td><td>(0.498)</td></tr>
+<tr><td style="text-align:left">ideologiaE. Derecha</td><td></td><td></td><td></td><td>-0.769</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.844)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatConocido-validado:HomoIndex</td><td>-0.312</td><td>-0.290</td><td>-0.289</td><td>-0.237</td></tr>
-<tr><td style="text-align:left"></td><td>(0.493)</td><td>(0.494)</td><td>(0.496)</td><td>(0.510)</td></tr>
+<tr><td style="text-align:left">448.000</td><td></td><td></td><td></td><td>0.577</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.387)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatAmigo-validado:DigitIndex</td><td>0.715</td><td>0.631</td><td>0.626</td><td>0.662</td></tr>
-<tr><td style="text-align:left"></td><td>(0.526)</td><td>(0.530)</td><td>(0.532)</td><td>(0.548)</td></tr>
+<tr><td style="text-align:left">1.000.000</td><td></td><td></td><td></td><td>0.042</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.361)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatConocido-Misinfo:DigitIndex</td><td>0.419</td><td>0.380</td><td>0.376</td><td>0.456</td></tr>
-<tr><td style="text-align:left"></td><td>(0.498)</td><td>(0.501)</td><td>(0.502)</td><td>(0.515)</td></tr>
+<tr><td style="text-align:left">3.000.000</td><td></td><td></td><td></td><td>0.234</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.372)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatConocido-validado:DigitIndex</td><td>0.638</td><td>0.613</td><td>0.640</td><td>0.737</td></tr>
-<tr><td style="text-align:left"></td><td>(0.510)</td><td>(0.512)</td><td>(0.513)</td><td>(0.528)</td></tr>
+<tr><td style="text-align:left">3.000.000</td><td></td><td></td><td></td><td>-0.023</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.511)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Constant</td><td>-0.057</td><td>-0.216</td><td>-0.055</td><td>-0.122</td></tr>
-<tr><td style="text-align:left"></td><td>(0.302)</td><td>(0.324)</td><td>(0.332)</td><td>(0.425)</td></tr>
+<tr><td style="text-align:left">E3TreatAmigo-Misinfo:HomoIndex</td><td>0.267</td><td>0.294</td><td>0.255</td><td>0.176</td></tr>
+<tr><td style="text-align:left"></td><td>(0.480)</td><td>(0.482)</td><td>(0.484)</td><td>(0.503)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">E3TreatAmigo-validado:HomoIndex</td><td>-0.235</td><td>-0.137</td><td>-0.116</td><td>-0.348</td></tr>
+<tr><td style="text-align:left"></td><td>(0.485)</td><td>(0.490)</td><td>(0.493)</td><td>(0.514)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">E3TreatConocido-validado:HomoIndex</td><td>-0.045</td><td>0.004</td><td>-0.034</td><td>-0.059</td></tr>
+<tr><td style="text-align:left"></td><td>(0.476)</td><td>(0.477)</td><td>(0.480)</td><td>(0.499)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">E3TreatAmigo-Misinfo:DigitIndex</td><td>-0.419</td><td>-0.380</td><td>-0.376</td><td>-0.485</td></tr>
+<tr><td style="text-align:left"></td><td>(0.498)</td><td>(0.501)</td><td>(0.502)</td><td>(0.518)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">E3TreatAmigo-validado:DigitIndex</td><td>0.296</td><td>0.251</td><td>0.251</td><td>0.328</td></tr>
+<tr><td style="text-align:left"></td><td>(0.514)</td><td>(0.516)</td><td>(0.517)</td><td>(0.538)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">E3TreatConocido-validado:DigitIndex</td><td>0.218</td><td>0.233</td><td>0.265</td><td>0.301</td></tr>
+<tr><td style="text-align:left"></td><td>(0.495)</td><td>(0.496)</td><td>(0.498)</td><td>(0.515)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Constant</td><td>-0.002</td><td>-0.107</td><td>0.035</td><td>-0.358</td></tr>
+<tr><td style="text-align:left"></td><td>(0.325)</td><td>(0.336)</td><td>(0.342)</td><td>(0.443)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>679</td><td>679</td><td>679</td><td>679</td></tr>
-<tr><td style="text-align:left">Log Likelihood</td><td>-432.703</td><td>-431.383</td><td>-428.502</td><td>-411.816</td></tr>
-<tr><td style="text-align:left">Akaike Inf. Crit.</td><td>895.405</td><td>896.767</td><td>893.004</td><td>865.631</td></tr>
+<tr><td style="text-align:left">Log Likelihood</td><td>-432.703</td><td>-431.383</td><td>-428.502</td><td>-408.914</td></tr>
+<tr><td style="text-align:left">Akaike Inf. Crit.</td><td>895.405</td><td>896.767</td><td>893.004</td><td>871.829</td></tr>
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="4" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
 </table>
